// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Component Styling matches NavLink snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.25rem;
  padding: 0 var(--spacing-half);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-half);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 svg {
  color: #006296;
  height: 1rem;
  width: 1rem;
}

.c0[visited],
.c0:visited {
  color: #006296;
}

.c0[visited] svg,
.c0:visited svg {
  color: #006296;
}

.c0[hover],
.c0:hover {
  color: #003A5A;
}

.c0[hover] svg,
.c0:hover svg {
  color: #003A5A;
}

.c0[disabled],
.c0[aria-disabled='true'],
.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<Link
  href="/test"
  routerLink={
    {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
>
  <styled.a
    $disabled={false}
    $isMobile={false}
    aria-disabled="false"
    as={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    data-testid="link"
    href="/test"
    id="uuid1"
    onClick={[Function]}
    tabIndex={0}
    to="/test"
  >
    <NavLink
      aria-disabled="false"
      className="c0"
      data-testid="link"
      href="/test"
      id="uuid1"
      onClick={[Function]}
      tabIndex={0}
      to="/test"
    >
      <Link
        aria-disabled="false"
        className="c0"
        data-testid="link"
        href="/test"
        id="uuid1"
        onClick={[Function]}
        tabIndex={0}
        to="/test"
      >
        <a
          aria-disabled="false"
          className="c0"
          data-testid="link"
          href="/test"
          id="uuid1"
          onClick={[Function]}
          tabIndex={0}
        >
          Navigation Link
        </a>
      </Link>
    </NavLink>
  </styled.a>
</Link>
`;

exports[`Link Component Styling matches RouteLink snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.25rem;
  padding: 0 var(--spacing-half);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-half);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 svg {
  color: #006296;
  height: 1rem;
  width: 1rem;
}

.c0[visited],
.c0:visited {
  color: #006296;
}

.c0[visited] svg,
.c0:visited svg {
  color: #006296;
}

.c0[hover],
.c0:hover {
  color: #003A5A;
}

.c0[hover] svg,
.c0:hover svg {
  color: #003A5A;
}

.c0[disabled],
.c0[aria-disabled='true'],
.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<Link
  href="/test"
  routerLink={
    {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    }
  }
>
  <styled.a
    $disabled={false}
    $isMobile={false}
    aria-disabled="false"
    as={
      {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    data-testid="link"
    href="/test"
    id="uuid1"
    onClick={[Function]}
    tabIndex={0}
    to="/test"
  >
    <Link
      aria-disabled="false"
      className="c0"
      data-testid="link"
      href="/test"
      id="uuid1"
      onClick={[Function]}
      tabIndex={0}
      to="/test"
    >
      <a
        aria-disabled="false"
        className="c0"
        data-testid="link"
        href="/test"
        id="uuid1"
        onClick={[Function]}
        tabIndex={0}
      >
        Navigation Link
      </a>
    </Link>
  </styled.a>
</Link>
`;

exports[`Link Component Styling matches default snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.25rem;
  padding: 0 var(--spacing-half);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-half);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 svg {
  color: #006296;
  height: 1rem;
  width: 1rem;
}

.c0[visited],
.c0:visited {
  color: #006296;
}

.c0[visited] svg,
.c0:visited svg {
  color: #006296;
}

.c0[hover],
.c0:hover {
  color: #003A5A;
}

.c0[hover] svg,
.c0:hover svg {
  color: #003A5A;
}

.c0[disabled],
.c0[aria-disabled='true'],
.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<Link>
  <styled.a
    $disabled={false}
    $isMobile={false}
    aria-disabled="false"
    data-testid="link"
    href="#"
    id="uuid1"
    onClick={[Function]}
    tabIndex={0}
    to="#"
  >
    <a
      aria-disabled="false"
      className="c0"
      data-testid="link"
      href="#"
      id="uuid1"
      onClick={[Function]}
      tabIndex={0}
      to="#"
    />
  </styled.a>
</Link>
`;

exports[`Link Component Styling matches with children snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: var(--border-radius);
  color: #006296;
  cursor: pointer;
  font-size: 0.875rem;
  font-style: normal;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.25rem;
  padding: 0 var(--spacing-half);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: var(--spacing-half);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 svg {
  color: #006296;
  height: 1rem;
  width: 1rem;
}

.c0[visited],
.c0:visited {
  color: #006296;
}

.c0[visited] svg,
.c0:visited svg {
  color: #006296;
}

.c0[hover],
.c0:hover {
  color: #003A5A;
}

.c0[hover] svg,
.c0:hover svg {
  color: #003A5A;
}

.c0[disabled],
.c0[aria-disabled='true'],
.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c0:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

<Link>
  <styled.a
    $disabled={false}
    $isMobile={false}
    aria-disabled="false"
    data-testid="link"
    href="#"
    id="uuid1"
    onClick={[Function]}
    tabIndex={0}
    to="#"
  >
    <a
      aria-disabled="false"
      className="c0"
      data-testid="link"
      href="#"
      id="uuid1"
      onClick={[Function]}
      tabIndex={0}
      to="#"
    >
      <span>
        Test
      </span>
    </a>
  </styled.a>
</Link>
`;
